Fix T41139: Cycles Hair BSDF roughness problem